--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+   assets:
+     - data/type_items.json
+     - data/type_weapoon.json
+     - data/type_equipment.json
+     - data/type_unit.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
